--- a/styles/styles.css
+++ b/styles/styles.css
@@ -85,3 +85,22 @@ a:hover {
 .breadcrumb-item+.breadcrumb-item::before {
 	color: #ffffff;
 }
+.modal h1 {
+	margin:0;
+}
+dt {
+	font-family: 'Wire One', sans-serif;
+	font-size: 1.75em;
+}
+
+dd {
+	margin: 0;
+	padding: 0;
+	line-height: 1.5em;
+	font-size: .8em;
+	font-weight: 100;
+}
+dd strong {
+	font-size: 2em;
+	font-weight: 100;
+}
